Fixed overheading letterspacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -208,7 +208,7 @@ nav a {
     font-family: Corbel, sans-serif;
     font-weight: 700;
     font-size: 1rem;
-    letter-spacing: 0.375em;
+    letter-spacing: 0.2727em;
     line-height: 2;
     text-transform: uppercase;
 }
